// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totaling 
    $0.00
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with multi expense 1`] = `
<div>
  <h1>
     Viewing 
    3
     
    expenses
     totaling 
    $0.00
  </h1>
</div>
`;
